<resources>

    <string name="app_name">YumPlan</string>
    <string name="title1"> Discover New Flavors </string>
    <string name="desc_title1">
        Explore thousands of smart recipes tailored to
        your taste buds and dietary goals. Cooking just
        got more exciting.
    </string>
    <string name="title2"> Plan Your Week </string>
    <string name="desc_title2">
        Save time and eat healthier by scheduling
        your meals in advance.
    </string>
    <string name="title3"> Have Fun ! </string>
    <string name="desc_title3"> enjoy the app made me happy </string>
    <string name="skip"> SKIP </string>
    <string name="Title"> HI, Ready to explore some Meals </string>


    <!--    Fragment Login  -->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>"
    <string name="welcome_login">Welcome Back !</string>
    <string name="subtitle_login">Healthy eating starts here .</string>
    <string name="email_title">Email</string>
    <string name="email_prof">Email : </string>
    <string name="email">Enter your email</string>
    <string name="password_title">Password</string>
    <string name="password">Enter your password</string>
    <string name="forgot_password">Forgot password .</string>
    <string name="loggin_button">Login to YumPlan</string>
    <string name="continue_with">Or continue with</string>
    <string name="guest_mode">Continue as Guest</string>
    <string name="newhere">New here?</string>

    <!--    Sign_Up_Fragment     -->

    <string name="create">Create an account</string>
    <string name="newAccount">Create Account</string>
    <string name="subNewAccount">Join us to start planning your healthy meals today.</string>
    <string name="username">UserName</string>
    <string name="username_prof">UserName : </string>
    <string name="Username_entry">Enter your username</string>
    <string name="By_signing">By Signing up you agree to our</string>
    <string name="terms">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy">Privacy Policy</string>
    <string name="have">Already have an account?</string>
    <string name="content_arrow">arrow back</string>
    <string name="content_google">Google_Icon</string>
    <string name="content_facebook">facebook_Icon</string>
    <string name="ImageContent">image</string>

    <!-- Meal Cards / Category  -->

    <string name="Meal_Title">Meal Title</string>
    <string name="Meal_Category">Category</string>
    <string name="Meal_time">meal time</string>
    <string name="holder_image">holder_image</string>
    <string name="search">search</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="search_hint">Search recipes, ingredients...</string>
    <string name="featured_recipe">FEATURED RECIPE</string>
    <string name="view_recipe">view recipe</string>
    <string name="recommended_for_u">Recommended for U 😊</string>
    <string name="love">Love_desc 😊</string>
    <string name="ingredients">🥗 Ingredients</string>
    <string name="ing_info"> • San Marzano Tomatoes\n• Mozzarella\n• Fresh Basil\n• Fresh Dough </string>
    >
    <string name="sub_desc">Italian • Pizza</string>
    <string name="Area">Area</string>
    <string name="delm">|</string>
    <string name="Steps">📝 Cooking Steps</string>
    <string name="record">🎥 Cooking Tutorial</string>
    <string name="Description">1. Prepare the dough\n2. Add sauce and cheese\n3. Bake at high temperature</string>


    <!-- Bottom Nav Names  -->

    <string name="profile">Profile</string>
    <string name="Home">Home</string>
    <string name="search_Nav_title">search</string>
    <string name="Fav">Favourite</string>
    <string name="plan">Plan</string>
    <string name="logout">Logout</string>


    <!--    Search Bar and Country Dropdown      -->

    <string name="country_flag">country_flag</string>
    <string name="country_name">country_name</string>
    <string name="search_ic">Search_ic</string>

    <!--    Item Ingredient     -->

    <string name="ing_title">ing_title</string>
    <string name="ing_mes">ing_mes</string>

    <!--    Favourites    -->

    <string name="Fav_title">My Favourites</string>
    <string name="item_mealFav">No favorite meals yet.</string>

    <!--   Planned -->

    <string name="Plan_title">Weekly Plan</string>
    <string name="item_meal_planned">No meals planned yet.</string>

    <!-- Chip Group -->
    <string name="text_filter_1">Category</string>
    <string name="text_filter_2">Ingredient</string>
    <string name="text_filter_3">Country</string>
    <!-- Google login web client id (Replace with yours from google-services.json or Firebase console) -->
    <string name="default_web_client_id">269945847269-qg1kpopi5tit59jnm6m5oo57lgofr30p.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>