<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_id"
        android:title="@string/Home"
        android:icon="@drawable/home_ic"
        />

    <item
        android:id="@+id/search_id"
        android:title="@string/search_Nav_title"
        android:icon="@drawable/ic_menu_search"
        />

    <item
        android:id="@+id/fav_id"
        android:title="@string/Fav"
        android:icon="@drawable/fav_ic"
        />

    <item
        android:id="@+id/plan_id"
        android:title="@string/plan"
        android:icon="@drawable/plan_ic"

        />

    <item
        android:id="@+id/prof_id"
        android:title="@string/profile"
        android:icon="@drawable/person_ic"
        />

</menu>
