<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.person.view.person">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginHorizontal="130dp"
        android:layout_marginVertical="48dp"
        android:src="@drawable/avatar_photo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="220dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_prof"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="normal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="250dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_prof"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="normal"
            />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Logout_id"
        app:backgroundTint="@color/white2"
        app:tint="@color/green3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/love"
        android:src="@drawable/logout_ic" />

</FrameLayout>