<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signup.SignupFragment">

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/redhattext_semibold"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_arrow"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/redhattext_semibold"
        android:textSize="36sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/sub_creation"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/subNewAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhattext_regular"
        android:textColor="@color/grey1"
        />

    <LinearLayout
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sub_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Outlined_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/orange6"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/man_24px"
            android:layout_marginVertical="16dp"
            app:hintAnimationEnabled="true"
            android:hint="@string/username"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redhattext_regular"
                android:textColor="@color/grey1"
                android:paddingStart="40dp"
                android:paddingEnd="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Outlined_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/orange6"
            android:hint="@string/email_title"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/mail_24px"
            android:layout_marginVertical="16dp">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redhattext_regular"
                android:textColor="@color/grey1"
                android:paddingStart="40dp"
                android:paddingEnd="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Outlined_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                app:boxStrokeColor="@color/orange6"
                android:hint="@string/password_title"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/lock_24px"

                android:layout_marginBottom="16dp"
            >


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redhattext_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/grey1"
                    android:paddingStart="40dp"
                    android:paddingEnd="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/texttt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_form">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/redhattext_regular"
            android:text="@string/By_signing"
            android:textColor="@color/grey1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/redhattext_semibold"
            android:text="@string/terms"
            android:textColor="@color/orange6"
            app:layout_constraintStart_toEndOf="@id/text1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/redhattext_regular"
            android:text="@string/and"
            android:textColor="@color/grey1"
            app:layout_constraintStart_toEndOf="@id/text2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/redhattext_semibold"
            android:text="@string/privacy"
            android:textColor="@color/orange6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/orange6"
        android:fontFamily="@font/redhattext_semibold"
        android:text="@string/newAccount"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttt"
        app:icon="@drawable/outline_arrow_forward_24"
        app:iconGravity="end"
        />

    <LinearLayout

        android:id="@+id/new_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have"
            android:fontFamily="@font/redhattext_regular"
            />


        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/redhattext_semibold"
            android:textColor="@color/blue3"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>